<resources>
    <string name="app_name">Batik</string>
    <string name="retailer_heading">find your\nbatik pattern</string>
    <string name="retailer_tag_line">We will help you to track batik pattern and\nother information about batik</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome_login">Hallo\nWelcome Back</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_signup">WELCOME</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next_btn">NEXT</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_age">Select Your Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="dashboard">Dashboard</string>
    <string name="batik">BATIK</string>
    <string name="search">Search</string>
    <string name="asana">Batik Asana</string>
    <string name="asana_detail">Salah satu pilihan batik yang menyediakan banyak sekali pilihan</string>
    <string name="trending">Trending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batik_name">Batik Name</string>
    <string name="price">Rp. 140.000 - Rp. 145.000</string>
    <string name="whatsapp">0813-8066-16189</string>
    <string name="instagram">\@asanabatik</string>
    <string name="website">asanabatik.com</string>
    <string name="content">Rekomendasi yang pertama untuk kemeja batik terbaik pria adalah batik Asana. Ini merupakan salah satu pilihan batik yang menyediakan banyak sekali pilihan, terutama untuk acara formal. Keunggulan lainnya dari Batik Asana adalah cocok untuk suasana formal maupun sehari-hari.</string>
    <string name="batik_scanner">Batik Scanner</string>
    <string name="cpt_or_upl">Capture or upload your batik pattern</string>
    <string name="snap">Snap</string>
    <string name="upload">Upload</string>
    <string name="error_text">Sorry, we\'re under maintenace!</string>
    <string name="error_text1">Hang on till we get the error fixed.</string>
    <string name="error_text2">You may also try again later</string>
    <string name="full_name">Example Name</string>
    <string name="nick_name">Example_name</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">E-Mail</string>
    <string name="email_name">example@email.com</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="phone_num">+62 8123-4567-891</string>
    <string name="pasword">examplepassword</string>
    <string name="hint_password">Password</string>
    <string name="update">UPDATE</string>
    <string name="search_result">Search result</string>
    <string name="select">SELECT</string>
    <string name="take">TAKE</string>
    <string name="output">Output</string>
    <string name="start">START</string>
</resources>