<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@color/background"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/error_icon"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/error_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/error_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/error_text1"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/error_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/error_text2"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>