<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@color/background"
    tools:context=".ui.find.FindFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/scan_icon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/scan_icon"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/batik_scanner"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/scan_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/cpt_or_upl"
            android:textAlignment="center" />

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/start"
            android:textColor="@color/background"
            android:textSize="14sp"
            android:transitionName="transition_capture_btn" />

    </LinearLayout>

</ScrollView>